# pcompress

./: .gitignore  Cargo.toml  README.md  pgo.sh  release.sh
examples/: chain.sh  chain_flip.py  chain_recom.jl  chain_recom.py
python/: pyproject.toml
python/PartitionCompress/: __init__.py  record.py
python/demo/: pcompress-demo.ipynb
python/examples/: record.py  replay.py
python/pcompress/: __init__.py  history.py  metadata.py  record.py  replay.py  utils.py
python/tests/: test_history.py  test_inverse.py
src/: decode.rs  diff.rs  encode.rs  lib.rs  main.rs
