[package]
name = "PartitionCompress"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
structopt = "0.3.21"
serde = "1.0.127"
mimalloc = { version = "0.1.17", default-features = false }


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
