[package]
name = "pcompress"
version = "0.1.0"
authors = ["Max Fan <root@max.fan>"]
description = "Experimental, efficient, and performant binary representation of districting plans"
readme = "README.md"
edition = "2018"
repository = "https://github.com/InnovativeInventor/pcompress"
license = "MIT"
keywords = ["redistricting", "compression", "parser"]
categories = ["command-line-utilities", "compression", "encoding", "parsing", "science"]
exclude = ["julia/", "python/", "zstd/", "examples/", ".*", "pgo.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
structopt = "0.3.21"
serde = "1.0.127"
mimalloc = { version = "0.1.17", default-features = false }


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
